crates/stackable-versioned-macros/tests/bad/deprecate.rs
use stackable_versioned_macros::versioned;

fn main() {
    #[versioned(
        version(name = "v1alpha1"),
        version(name = "v1beta1"),
        version(name = "v1")
    )]
    struct Foo {
        #[deprecated]
        bar: usize,
        baz: bool,
    }
}
